--- a/pkg/scheduler/initialsizeclass/BUILD.bazel
+++ b/pkg/scheduler/initialsizeclass/BUILD.bazel
@@ -30,6 +30,7 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
+        "@com_github_golang_protobuf//proto",
         "@org_golang_google_protobuf//types/known/durationpb",
         "@org_golang_google_protobuf//types/known/emptypb",
         "@org_golang_google_protobuf//types/known/timestamppb",
